--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,3 +7,4 @@ edition = "2018"
 [dependencies]
 termion = "1.5.3"
 clap = { git="https://github.com/clap-rs/clap.git", version="3.0.0-beta.1" }
+memmap = "0.7.0"
