Fix binary name

--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -104,16 +104,15 @@ jobs:
       - name: Package
         shell: bash
         run: |
-          #strip target/${{ matrix.target }}/release/rust-ci
           cd target/${{ matrix.target }}/release
-          tar czvf ../../../rust-ci-${{ matrix.target }}.tar.gz rust-ci
+          tar czvf ../../../lesser-${{ matrix.target }}.tar.gz lesser
           cd -
 
       - name: Publish
         uses: softprops/action-gh-release@v1
         # TODO: if any of the build step fails, the release should be deleted.
         with:
-          files: 'rust-ci*'
+          files: 'lesser*'
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
